src/app/components/nav-bar/nav-bar.component.scss
#social-links {
    border-right: 1px solid;
    padding: 0px 8px;
}

#header {
    background-color: white;
}

nav {
    max-height: 104px;
}

.mobile-menu {
    align-self: center;
}

#hamburger-menu-icon {
    height: 32px;
    width: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

#hamburger-menu-icon:hover {
    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1);
}

nav .checkbox {
    position: absolute;
    display: block;
    height: 32px;
    width: 32px;
    z-index: 5;
    opacity: 0;
    cursor: pointer;
}

.mobile-menu-items{
    background-color: white;
    position: absolute;
    display: flex;
    flex-direction: column;
    right: 0;
    width: 100%;
    height: calc(100vh - 104px);
    transform: translateX(500px);
    transition: transform 0.5s ease-in-out;
    padding: 0px 32px 32px 32px;
}

.mobile-menu-items button {
    border-bottom: 1px solid #212121;
    padding: 32px;
}

#hamburger-menu-icon .line1 {
    transform-origin: 0% 0%;
    transition: transform 0.4s ease-in-out;
}
  
#hamburger-menu-icon .line2 {
    transition: transform 0.2s ease-in-out;
}
  
#hamburger-menu-icon .line3 {
    transform-origin: 0% 100%;
    transition: transform 0.4s ease-in-out;
}

nav input[type="checkbox"]:checked ~ .mobile-menu-items {
    transform: translateX(0);
}
    
nav input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
    transform: rotate(45deg);
}
    
nav input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
    transform: scaleY(0);
}
    
nav input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
    transform: rotate(-45deg);
}
  

